# scSemiProfiler

./: .readthedocs.yaml  LICENSE.txt  README.md  cellchat_eg.ipynb  deconvolution_example.ipynb  example.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: deconvolution_example-checkpoint.ipynb  example-checkpoint.ipynb
COVID-19/: cellchat.ipynb  deconv_benchmarking.ipynb  fast_functions_covid.py  fast_generator_covid.py  pipeline_test.ipynb  preprocessing.ipynb  semicommand.py  semiloop.ipynb
COVID-19/results/celltype_marker_go/: B_cell.txt  B_cell_pvals.npy  CD14.txt  CD14_pvals.npy  CD16.txt  CD16_pvals.npy  CD4.txt  CD8.txt  (+28 more)
colorectal_cancer/: cellchat.ipynb  deconv_benchmarking.ipynb  fast_generator_cancer.py  pipeline_test.ipynb  preprocessing.ipynb  semicommand.py  semiloop.ipynb  semiresultanalysis.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  contact.rst  credits.rst  environment.txt  example.ipynb  gallery.rst  index.rst  install.rst  references.rst  release.rst  tutorials.rst
example_data/: bulkdata.h5ad
iMGL/: cellchat.ipynb  deconv_benchmarking.ipynb  fast_functions_ipsc.py  fast_generator_ipsc.py  pipeline_test.ipynb  preprocessing.ipynb  semicommand.py  semiloop.ipynb
scSemiProfiler/: __init__.py  activeselect.py  fast_functions.py  fast_generator.py  get_eg_representatives.py  inference.py  initial_setup.py  initsetup.py  scinfer.py  scprocess.py  singlecell_process.py  utils.py  vaegan.py
scSemiProfiler/.ipynb_checkpoints/: __init__-checkpoint.py  activeselect-checkpoint.py  initsetup-checkpoint.py  scinfer-checkpoint.py
(+120 files in other folders)
