[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scSemiProfiler"
authors = [{name = "Jingtao Wang", email = "jingtao.wang@mail.mcgill.ca"}]
dynamic = ["version", "description"]
    dependencies = [
    'numpy>= 1.26.2',
    'scanpy>= 1.9.6',
    'scipy>= 1.11.4',
    'anndata>= 0.10.3',
    'faiss-cpu>= 1.7.4',
    'torch>= 1.12.1',
    'scikit-learn>= 1.3.2',
    'pandas>= 2.1.3',
    'jax>= 0.4.19',
    'igraph>=0.9.9',
    'gseapy>=1.0.4',                  
    'scvi-tools>= 1.0.4']

[project.optional-dependencies]
doc = [
    #"sphinx==7.1.2",
    "sphinx<4",
    "sphinx-rtd-theme==1.3.0rc1",
    "sphinx-copybutton",
    "nbsphinx",
    "sphinx-rtd-theme",
    "ipython",
    "jinja2<3.1",
    "prompt-toolkit<3.0.0",
    "sphinxcontrib-applehelp==1.0.1" ,
    #"sphinx_autodoc_typehints"
    "sphinx-autodoc-typehints<1.12",
    "sphinxcontrib_devhelp==1.0.2",
    "sphinxcontrib_htmlhelp-2.0.1",
    "sphinxcontrib-jquery-4.1",
    "sphinxcontrib-qthelp-1.0.3", 
    "sphinxcontrib-serializinghtml-1.1.5"
]
